--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.2",
     "react": "^18.3.1",
